--- a/index.html
+++ b/index.html
@@ -764,7 +764,7 @@
             <div id="u89" class="ax_default _三级标题">
               <div id="u89_div" class=""></div>
               <div id="u89_text" class="text ">
-                <p><span style="text-decoration:none;">Learning Code Context Information to Predict Comment Locations, 10.1109/IEEE Transaction on Reability 2019.2931725 </span></p>
+                <p><span style="text-decoration:none;">Learning Code Context Information to Predict Comment Locations, 10.1109/IEEE Transactions on Reliability 2019.2931725 </span></p>
               </div>
             </div>
 
@@ -772,7 +772,7 @@
             <div id="u90" class="ax_default _三级标题">
               <div id="u90_div" class=""></div>
               <div id="u90_text" class="text ">
-                <p><span style="text-decoration:none;">(SCI二区期刊论文，学生一作)</span></p>
+                <p><span style="text-decoration:none;">(SCI二区期刊论文，学生一作，已接受)</span></p>
               </div>
             </div>
 
